[package]
name = "xnft-cli"
version = "0.1.0"
description = "Command line tool for fetching and inspecting xNFT program state"
edition = "2021"
repository = "https://github.com/coral-xyz/xnft"
readme = "https://github.com/coral-xyz/xnft#readme"

[[bin]]
name = "xnft"
path = "src/main.rs"

[features]
default = []

[profile.release]
opt-level = "s"

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor" }
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
xnft = { path = "../programs/xnft/", features = ["no-entrypoint"] }

[dev-dependencies]
serde_test = "1.0"
