[package]
name = "xnft-cli"
version = "0.2.0"
description = "CLI to interact with the xNFT protocol"
license = "GPL-3.0-only"
edition = "2021"

[[bin]]
name = "xnft"
path ="src/bin/main.rs"

[features]
default = []

[profile.release]
opt-level = "s"

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
serde_json = "1.0"
shellexpand = "2.1"
solana-cli-config = "1.14"
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5", features = ["no-entrypoint"] }
xnft = { path = "../programs/xnft", features = ["cli"] }
