[package]
name = "xnft"
version = "0.2.0"
description = "Protocol for minting and managing xNFTs"
license = "GPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xnft"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = { version = "0.27.0", features = ["metadata"] }
mpl-token-metadata = { version = "1.4.3", features = ["no-entrypoint"] }
serde = { version = "1.0", optional = true }
solana-security-txt = "1.0"

[dev-dependencies]
itertools = "0.10"
serde = "1.0"
serde_test = "1.0"
